--- a/index.html
+++ b/index.html
@@ -2069,7 +2069,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p class="copyright">© 2025 Fetish Zone. All rights reserved.</p>
+<!--         <p class="copyright">© 2025 Fetish Zone. All rights reserved.</p> -->
       </div>
     </footer>
 
