--- a/signup/index.html
+++ b/signup/index.html
@@ -921,12 +921,12 @@
       </main>
 
       <footer class="footer">
-        <p>© 2025 Fetish Zone. All rights reserved.</p>
+<!--         <p>© 2025 Fetish Zone. All rights reserved.</p>
         <div class="footer-links">
           <a href="#" class="footer-link">Privacy Policy</a>
           <a href="#" class="footer-link">Terms of Service</a>
           <a href="#" class="footer-link">Contact Us</a>
-        </div>
+        </div> -->
       </footer>
     </div>
 
