--- a/cart/index.html
+++ b/cart/index.html
@@ -1777,7 +1777,7 @@
         helpBtn.addEventListener("click", toggleHelpModal);
         closeHelp.addEventListener("click", toggleHelpModal);
         contactSupportBtn.addEventListener("click", () => {
-          window.location.href = "/support/";
+          window.location.href = "/chat/";
         });
 
         // Copy buttons
