--- a/cart/index.html
+++ b/cart/index.html
@@ -1276,7 +1276,7 @@
         <div class="header-actions">
           <button class="back-btn" id="backBtn">
             <i class="fas fa-arrow-left"></i>
-            <span>Back to Shop</span>
+<!--             <span>Back to Shop</span> -->
           </button>
 
           <button class="help-btn" id="helpBtn">
