--- a/chat/index.html
+++ b/chat/index.html
@@ -1235,7 +1235,7 @@
             alt="Fetish Zone Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+<!--           <h1 class="brand-name">Fetish Zone</h1> -->
         </div>
 
         <div class="header-actions">
