--- a/chat/index.html
+++ b/chat/index.html
@@ -1293,10 +1293,10 @@
 
     <!-- Main Container -->
     <div class="main-container">
-      <h1 class="section-title" style="margin-bottom: 1.5rem">
+<!--       <h1 class="section-title" style="margin-bottom: 1.5rem">
         <i class="fas fa-headset"></i>
         Customer Support
-      </h1>
+      </h1> -->
 
       <div class="chat-container">
         <!-- Chat Sidebar -->
@@ -1356,9 +1356,9 @@
             <div class="empty-state">
               <i class="fas fa-comment-dots empty-icon"></i>
               <h3 class="empty-title">Start a conversation</h3>
-              <p class="empty-description">
+<!--               <p class="empty-description">
                 Select a chat or start a new conversation with our support team
-              </p>
+              </p> -->
             </div>
           </div>
 
