--- a/cart/index.html
+++ b/cart/index.html
@@ -1276,7 +1276,7 @@
         <div class="header-actions">
           <button class="back-btn" id="backBtn">
             <i class="fas fa-arrow-left"></i>
-<!--             <span>Back to Shop</span> -->
+            <!-- <span>Back to Shop</span> -->
           </button>
 
           <button class="help-btn" id="helpBtn">
@@ -1388,7 +1388,7 @@
                 <div class="payment-method-info">
                   <div class="payment-method-title">Cryptocurrency</div>
                   <div class="payment-method-description">
-                    Pay with BTC, ETH or other cryptocurrencies
+                    Pay with Bitcoin (BTC)
                   </div>
                 </div>
                 <i class="fas fa-check-circle"></i>
@@ -1404,9 +1404,9 @@
                   <div class="crypto-wallet-title">BITCOIN (BTC)</div>
                 </div>
 
-                <!-- <div class="qr-code-container">
+                <div class="qr-code-container">
                   <div class="qr-code" id="btcQrCode"></div>
-                </div> -->
+                </div>
 
                 <div class="crypto-wallet-address" id="BTCAddress">
                   bc1q9kgtz7zgsla3ur2ua8q37yyu38upun5qhewv28
@@ -1424,37 +1424,6 @@
                 <p class="crypto-note">
                   Please send the exact amount to this address. Your order will
                   be processed after 3 network confirmations.
-                </p>
-              </div>
-
-              <div class="crypto-wallet">
-                <div class="crypto-wallet-header">
-                  <div class="crypto-wallet-icon">
-                    <i class="fab fa-ethereum"></i>
-                  </div>
-                  <div class="crypto-wallet-title">ETH (ERC20)</div>
-                </div>
-
-                <!-- <div class="qr-code-container">
-                  <div class="qr-code" id="ethQrCode"></div>
-                </div> -->
-
-                <div class="crypto-wallet-address" id="ethAddress">
-                  0x5B2321bc572BE17634Df9E5955aBFDF34A3838Ff
-                </div>
-                <div class="crypto-wallet-amount">
-                  <span class="crypto-amount-label">Amount:</span>
-                  <span class="crypto-amount-value" id="ethAmount"
-                    >0.00 ETH</span
-                  >
-                </div>
-                <button class="copy-btn" id="copyEthBtn">
-                  <i class="fas fa-copy"></i>
-                  Copy Address
-                </button>
-                <p class="crypto-note">
-                  Please include the transaction hash in the form below after
-                  payment.
                 </p>
               </div>
             </div>
@@ -1515,8 +1484,7 @@
               font-size: 0.8rem;
             "
           >
-            <i class="fas fa-shield-alt"></i> Secure checkout powered by crypto
-            payments
+            <i class="fas fa-shield-alt"></i> Secure checkout powered by Bitcoin
           </p>
         </div>
       </div>
@@ -1551,7 +1519,7 @@
           </div>
           <div class="confirmation-detail">
             <span class="detail-label">Payment Method:</span>
-            <span class="detail-value">Cryptocurrency (BTC)</span>
+            <span class="detail-value">Bitcoin (BTC)</span>
           </div>
         </div>
         <div class="confirmation-actions">
@@ -1598,10 +1566,10 @@
 
           <div class="help-section">
             <h3 class="help-section-title">
-              <i class="fab fa-bitcoin"></i> Crypto Payments
+              <i class="fab fa-bitcoin"></i> Bitcoin Payments
             </h3>
             <div class="help-section-content">
-              <p>Having trouble with cryptocurrency payments?</p>
+              <p>Having trouble with Bitcoin payments?</p>
               <ul style="margin-top: 0.5rem; padding-left: 1.5rem">
                 <li>Always send the exact amount shown</li>
                 <li>Double-check wallet addresses before sending</li>
@@ -1687,7 +1655,6 @@
       let orderTotal = 0;
       let cryptoRates = {
         BTC: 0,
-        ETH: 0,
       };
 
       // DOM Elements
@@ -1702,9 +1669,7 @@
       const discount = document.getElementById("discount");
       const grandTotal = document.getElementById("grandTotal");
       const BTCAmount = document.getElementById("BTCAmount");
-      const ethAmount = document.getElementById("ethAmount");
       const copyBTCBtn = document.getElementById("copyBTCBtn");
-      const copyEthBtn = document.getElementById("copyEthBtn");
       const cryptoWallets = document.getElementById("cryptoWallets");
       const confirmationModal = document.getElementById("confirmationModal");
       const confirmationOrderId = document.getElementById(
@@ -1782,7 +1747,6 @@
 
         // Copy buttons
         copyBTCBtn.addEventListener("click", () => copyAddress("BTCAddress"));
-        copyEthBtn.addEventListener("click", () => copyAddress("ethAddress"));
 
         // Place order button
         placeOrderBtn.addEventListener("click", placeOrder);
@@ -1821,12 +1785,11 @@
       async function fetchCryptoRates() {
         try {
           const response = await fetch(
-            "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum&vs_currencies=usd"
+            "https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd"
           );
           const data = await response.json();
 
           cryptoRates.BTC = data.bitcoin.usd;
-          cryptoRates.ETH = data.ethereum.usd;
 
           // Update crypto amounts if order total is already calculated
           if (orderTotal > 0) {
@@ -1836,55 +1799,36 @@
           showStatus(
             "success",
             "Rates Updated",
-            "Cryptocurrency rates loaded successfully"
+            "Bitcoin rate loaded successfully"
           );
         } catch (error) {
           console.error("Error fetching crypto rates:", error);
           // Fallback rates if API fails
           cryptoRates.BTC = 107470;
-          cryptoRates.ETH = 2440;
-          showStatus("error", "Rates Error", "Using default conversion rates");
+          showStatus("error", "Rates Error", "Using default conversion rate");
         }
       }
 
       // Generate QR codes for crypto addresses
       function generateQRCodes() {
         const btcAddress = document.getElementById("BTCAddress").textContent;
-        const ethAddress = document.getElementById("ethAddress").textContent;
+
+        QRCode.toCanvas(
+          document.getElementById("btcQrCode"),
+          `bitcoin:${btcAddress}`,
+          {
+            width: 150,
+            margin: 0,
+            color: {
+              dark: "#000000",
+              light: "#ffffff",
+            },
+          },
+          (error) => {
+            if (error) console.error("BTC QR error:", error);
+          }
+        );
       }
-
-      // QRCode.toCanvas(
-      //   document.getElementById("btcQrCode"),
-      //   `bitcoin:${btcAddress}`,
-      //   {
-      //     width: 150,
-      //     margin: 0,
-      //     color: {
-      //       dark: "#000000",
-      //       light: "#ffffff",
-      //     },
-      //   },
-      //   (error) => {
-      //     if (error) console.error("BTC QR error:", error);
-      //   }
-      // );
-
-      //   QRCode.toCanvas(
-      //     document.getElementById("ethQrCode"),
-      //     `ethereum:${ethAddress}`,
-      //     {
-      //       width: 150,
-      //       margin: 0,
-      //       color: {
-      //         dark: "#000000",
-      //         light: "#ffffff",
-      //       },
-      //     },
-      //     (error) => {
-      //       if (error) console.error("ETH QR error:", error);
-      //     }
-      //   );
-      // }
 
       // Load cart items
       function loadCartItems() {
@@ -1959,11 +1903,6 @@
         if (cryptoRates.BTC > 0) {
           const btcAmount = orderTotal / cryptoRates.BTC;
           BTCAmount.textContent = `${btcAmount.toFixed(8)} BTC`;
-        }
-
-        if (cryptoRates.ETH > 0) {
-          const ethAmount = orderTotal / cryptoRates.ETH;
-          ethAmount.textContent = `${ethAmount.toFixed(6)} ETH`;
         }
       }
 
@@ -2072,13 +2011,11 @@
             currency: "BTC",
             amount: orderTotal,
             btcAmount: parseFloat(BTCAmount.textContent.split(" ")[0]),
-            ethAmount: parseFloat(ethAmount.textContent.split(" ")[0]),
             transactionHash: document
               .getElementById("transactionHash")
               .value.trim(),
             walletAddress: document.getElementById("BTCAddress").textContent,
             exchangeRateBTC: cryptoRates.BTC,
-            exchangeRateETH: cryptoRates.ETH,
           };
 
           // Create order data
