--- a/signup/index.html
+++ b/signup/index.html
@@ -799,13 +799,16 @@
         </p>
       </section>
 
-      <div class="login-link-container">
+      <!-- <div class="login-link-container">
         <a href="/login/" class="login-link">Already a member? Sign in</a>
-      </div>
+      </div> -->
 
       <main class="main-content">
         <div class="signup-form-container">
           <h3 class="form-title">Create Account</h3>
+          <div class="login-link-container">
+            <a href="/login/" class="login-link">Already a member? Sign in</a>
+          </div>
           <form id="signupForm" class="signup-form">
             <div class="form-group">
               <input
