--- a/cart/index.html
+++ b/cart/index.html
@@ -1501,6 +1501,55 @@
           </section>
         </div>
 
+        <!-- New modal requested by shatter and his gang -->
+
+        <!-- Customer Support Card -->
+        <div
+          class="support-card"
+          style="
+            background: rgba(30, 41, 59, 0.6);
+            backdrop-filter: blur(15px);
+            border-radius: 20px;
+            padding: 1.5rem;
+            margin-top: 2rem;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: var(--shadow);
+            animation: fadeIn 0.8s ease-out;
+          "
+        >
+          <div style="margin-bottom: 1rem">
+            <p style="color: var(--gray); line-height: 1.6">
+              If you are having issues paying/ordering for a product click the
+              message button below to contact the customer care
+            </p>
+          </div>
+          <a
+            href="/chat/"
+            class="support-btn"
+            style="
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 0.5rem;
+              width: 100%;
+              background: linear-gradient(135deg, var(--accent), #0ea5e9);
+              color: white;
+              border: none;
+              padding: 12px;
+              border-radius: 10px;
+              font-weight: 600;
+              cursor: pointer;
+              transition: var(--transition);
+              text-decoration: none;
+            "
+          >
+            <i class="fas fa-comment-alt"></i>
+            <span>Send Message</span>
+          </a>
+        </div>
+
+        <!-- the new modal ends here -->
+
         <!-- Order Summary -->
         <div class="order-summary">
           <h2 class="section-title">
