--- a/cart/index.html
+++ b/cart/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Secure Checkout</title>
+    <title>Fetishromance | Secure Checkout</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -1314,10 +1314,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Secure Checkout</div>
     </div>
 
@@ -1327,10 +1327,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
 
         <div class="header-actions">
