--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Premium Luxury Store</title>
+    <title>Fetishromance | Premium Luxury Store</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -2073,10 +2073,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Premium Luxury Store</div>
     </div>
 
@@ -2086,10 +2086,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
 
         <div class="header-actions">
@@ -2236,7 +2236,7 @@
       <div class="testimonials-container" id="testimonialsContainer">
         <div class="testimonial-card animate">
           <p class="testimonial-text">
-            The quality of products from Fetish Zone is unmatched. Every
+            The quality of products from Fetishromance is unmatched. Every
             purchase feels like a luxury experience from start to finish.
           </p>
           <div class="testimonial-author">
@@ -2320,10 +2320,10 @@
           <div class="footer-logo">
             <img
               src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-              alt="Fetish Zone Logo"
+              alt="Fetishromance Logo"
               width="40"
             />
-            <span class="footer-brand">Fetish Zone</span>
+            <span class="footer-brand">Fetishromance</span>
           </div>
           <p class="footer-description">
             Your premier destination for luxury and premium products. We curate
