--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Your Wishlist</title>
+    <title>Fetishromance | Your Wishlist</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -866,10 +866,10 @@
       <div class="heart-loader"></div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Loading Your Wishlist</div>
     </div>
 
@@ -879,10 +879,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
 
         <div class="header-actions">
@@ -1422,8 +1422,8 @@
         if (navigator.share) {
           navigator
             .share({
-              title: "My Fetish Zone Wishlist",
-              text: "Check out my wishlist on Fetish Zone!",
+              title: "My Fetishromance Wishlist",
+              text: "Check out my wishlist on Fetishromance!",
               url: wishlistUrl,
             })
             .catch(() => {
