--- a/signup/index.html
+++ b/signup/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Exclusive Membership</title>
+    <title>Fetishromance | Exclusive Membership</title>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
@@ -771,10 +771,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
     </div>
 
     <!-- Main Content -->
@@ -783,10 +783,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
       </header>
 
@@ -794,7 +794,7 @@
         <div class="decorative-element"></div>
         <h2 class="hero-title">Join Our Exclusive Community</h2>
         <p class="hero-subtitle">
-          Become part of Fetish Zone and unlock a world of premium content,
+          Become part of Fetishromance and unlock a world of premium content,
           exclusive products, and a community that shares your passions.
         </p>
       </section>
@@ -930,7 +930,7 @@
       <i class="fas fa-check-circle success-icon"></i>
       <div>
         <h4>Account Created Successfully!</h4>
-        <p>Welcome to Fetish Zone</p>
+        <p>Welcome to Fetishromance</p>
       </div>
     </div>
 
