--- a/profile/index.html
+++ b/profile/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Your Profile</title>
+    <title>Fetishromance | Your Profile</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -1092,10 +1092,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Loading Your Profile</div>
     </div>
 
@@ -1105,10 +1105,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
 
         <div class="header-actions">
@@ -1271,7 +1271,7 @@
               <div class="info-item full-width">
                 <div class="info-label">About Me</div>
                 <div class="info-value" id="viewAboutMe">
-                  Premium member of Fetish Zone with a passion for exclusive
+                  Premium member of Fetishromance with a passion for exclusive
                   products.
                 </div>
               </div>
