--- a/login/index.html
+++ b/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Exclusive Login</title>
+    <title>Fetishromance | Exclusive Login</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -854,10 +854,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Premium Experience</div>
     </div>
 
@@ -870,10 +870,10 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
-          <h1 class="brand-name">Fetish Zone</h1>
+          <h1 class="brand-name">Fetishromance</h1>
         </div>
         <a href="/signup/" class="signup-link"
           >Don't have an account? Sign up</a
@@ -1001,12 +1001,12 @@
       <footer
         class="footer animate__animated animate__fadeIn animate__delay-2s"
       >
-        <p>© 2025 Fetish Zone. All rights reserved.</p>
+        <!-- <p>© 2025 Fetishromance. All rights reserved.</p>
         <div class="footer-links">
           <a href="#" class="footer-link">Privacy Policy</a>
           <a href="#" class="footer-link">Terms of Service</a>
           <a href="#" class="footer-link">Contact Us</a>
-        </div>
+        </div> -->
       </footer>
     </div>
 
