--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetish Zone | Premium Store Dashboard</title>
+    <title>Fetishromance | Premium Store Dashboard</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -1742,10 +1742,10 @@
       </div>
       <img
         src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-        alt="Fetish Zone Logo"
+        alt="Fetishromance Logo"
         class="loader-logo"
       />
-      <div class="loader-text">Fetish Zone</div>
+      <div class="loader-text">Fetishromance</div>
       <div class="loader-subtitle">Premium Store</div>
     </div>
 
@@ -1755,7 +1755,7 @@
         <div class="logo-container">
           <img
             src="https://cdn-icons-png.flaticon.com/128/10856/10856545.png"
-            alt="Fetish Zone Logo"
+            alt="Fetishromance Logo"
             class="logo"
           />
           <!-- <h1 class="brand-name">Fetish Zone</h1> -->
