--- a/login/index.html
+++ b/login/index.html
@@ -875,9 +875,9 @@
           />
           <h1 class="brand-name">Fetishromance</h1>
         </div>
-        <a href="/signup/" class="signup-link"
+        <!-- <a href="/signup/" class="signup-link"
           >Don't have an account? Sign up</a
-        >
+        > -->
       </header>
 
       <main class="main-content">
@@ -921,7 +921,11 @@
           class="login-form-container animate__animated animate__fadeIn animate__delay-1s"
         >
           <h3 class="form-title">Sign In</h3>
+
           <form id="loginForm" class="login-form">
+            <a href="/signup/" class="signup-link"
+              >Don't have an account? Sign up</a
+            >
             <div class="form-group">
               <input
                 type="email"
@@ -985,13 +989,13 @@
                 >
                   <i class="fab fa-google"></i> Google
                 </button>
-                <button
+                <!-- <button
                   type="button"
                   class="social-btn facebook"
                   id="facebookLogin"
                 >
                   <i class="fab fa-facebook-f"></i> Facebook
-                </button>
+                </button> -->
               </div>
             </div>
           </form>
