--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fetishromance | Premium Luxury Store</title>
+    <meta name="google-site-verification" content="gc2keoHyAh5Y7Lhv_QhEZJyKyGD-jHScng3GS5KKb3w" />
 
     <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="https://cdn-icons-png.flaticon.com/128/10856/10856545.png">
