--- a/index.html
+++ b/index.html
@@ -2382,7 +2382,7 @@
           </div>
         </div>
 
-        <div class="footer-links-group">
+<!--         <div class="footer-links-group">
           <h4 class="footer-heading">Shop</h4>
           <ul class="footer-links">
             <li>
@@ -2407,8 +2407,8 @@
             </li>
           </ul>
         </div>
-
-        <div class="footer-links-group">
+ -->
+<!--         <div class="footer-links-group">
           <h4 class="footer-heading">Help</h4>
           <ul class="footer-links">
             <li>
@@ -2432,9 +2432,9 @@
               >
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <div class="footer-links-group">
+<!--         <div class="footer-links-group">
           <h4 class="footer-heading">Company</h4>
           <ul class="footer-links">
             <li>
@@ -2460,7 +2460,7 @@
           </ul>
         </div>
       </div>
-
+ -->
       <div class="footer-bottom">
 <!--         <p class="copyright">© 2025 Fetish Zone. All rights reserved.</p> -->
       </div>
